--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </div>
 
     <footer>www 🎲 App Brewery 🎲 com</footer>
-    <script src="index.js" charset="utf-8"></script>
+    <script src="script.js" charset="utf-8"></script>
   </body>
 </html>
